--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,34 @@
-# The directory Mix will write compiled artifacts to.
-/_build/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# If you run "mix test --cover", coverage assets end up here.
-/cover/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# The directory Mix downloads your dependencies sources to.
-/deps/
+# testing
+/coverage
 
-# Where 3rd-party dependencies like ExDoc output generated docs.
-/doc/
+# next.js
+/.next/
+/out/
 
-# Ignore .fetch files in case you like to edit your project deps locally.
-/.fetch
+# production
+/build
 
-# If the VM crashes, it generates a dump, let's ignore it too.
-erl_crash.dump
+# misc
+.DS_Store
+*.pem
 
-# Also ignore archive artifacts (built via "mix archive.build").
-*.ez
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Ignore package tarball (built via "mix hex.build").
-blogs_api-*.tar
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Since we are building assets from assets/,
-# we ignore priv/static. You may want to comment
-# this depending on your deployment strategy.
-/priv/static/
-
-importantinfo
-.env
+# vercel
+.vercel
