--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "swr": "^0.5.4"
   },
   "devDependencies": {
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.8",
