--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.5.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@mdx-js/loader": "^1.6.22",
@@ -16,9 +15,9 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "framer-motion": "^4",
-    "immer": "^9.0.1",
     "moment": "^2.29.1",
     "next": "^10.0.8",
+    "random-name": "^0.1.2",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
