--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.1.3",
+    "@svgr/webpack": "^5.5.0",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "framer-motion": "^4",
